--- a/authoring_tutorials/tutorial_template_repo.qmd
+++ b/authoring_tutorials/tutorial_template_repo.qmd
@@ -27,25 +27,50 @@ Rather than linking out to files in the `lmu-osc/tutorial-template` repository, 
 
 
 
-## File Structure
+## Basic Repo Structure
 
-The code below recursively lists all of the files in the project.
+All of the folders and files in the `lmu-osc/tutorial-template` repo are laid out in the directory tree below.
 
 ```{r}
 setwd("tutorial-template")
-fs::dir_tree(recurse = T)
+fs::dir_tree(recurse = T, all = T, regexp = "^.git$|^.DS_Store$", invert = T)
 ```
 
-Each of these top-level folders and files are discussed below:
+Some of these files and folders require more explanation than others, and we aim to clarify all important pieces below. Later chapters will elaborate on how precisely to set up e.g. GitHub Pages for the tutorial, connect with Zotero, etc. But before diving in to developing a tutorial, it's necessary to get an overview of the structure.
+
+## Important Files and Folders
+
+### `.gitignore` {#gitignore}
+
+If you're not familiar with `.gitignore` files, I recommend taking a look at [this overview](https://www.w3schools.com/git/git_ignore.asp?remote=github).
+
+The included ignore file for the tutorials is a modified version of GitHub's template for R projects with some additions to ignore Quarto specific files, namely the `_site` folder. 
+
+Some people push this folder to their GitHub repo, and use it to serve their website from. However, we have a CI/CD workflow that will automatically render the website and serve it from the `gh-pages` branch.
+
+For Mac users, any `.DS_Store` files are also automatically ignored--those should never be tracked in a git project anyway as they are local indexing files for searching the system. (Tip: run the command `usethis::git_vaccinate()` if you want to globally ignore a handful of annoying)
+
+```{r, results='asis'}
+setwd("tutorial-template")
+cat("```yaml", readLines(".gitignore"), "```", sep = "\n")
+```
 
 
-# CITATION.cff {citation.cff}
+### `.github/workflows` {#pipelines}
 
-## Background: Citation File Format
+The two files contained in this directory, `citation-check.yml` and `publish.yml`, are `yaml` files for GitHub Actions that should run in your tutorials. The first action file checks that the formatting of your `CITIATION.cff` file meets requirements, and the `publish.yml` waits for changes on the `main` git branch then renders the whole website to the `gh-pages` branch in the repo.
+
+Both workflows are from commonly available templates, but I have modified the `publish.yml` to have some additional executuion instructions depending on whether or not the {renv} package is used in your project. (If you have any R code included, then please do use {renv}.)
+
+A later chapter will talk about how to manually run these pipelines if you need/want to for any reason, and will go into more detail on the code. However, 95% of the time you will not need to make any changes to these pipelines. Just be aware that they exist, and they are doing things that should make your life easier.
+
+### CITATION.cff {#citation.cff}
+
+#### Background: Citation File Format
 
 There is fairly extensive documentation online for [Citation File Format](https://citation-file-format.github.io/), but, in short, it is a standardized method for writing citation files in a `yaml` format. There are hundreds of different "fields" that can be filled out like DOIs, ORCIDs, author information, institution information, and so on.
 
-## Why these files?
+#### Why these files?
 
 This file ultimately has three main uses for our project:
 
@@ -53,15 +78,13 @@ This file ultimately has three main uses for our project:
 2. GitHub recognizes these files, and will create a citation for us directly in the repo. (Not as a file, but check out the "Cite this repository" button on the right-hand side of the repository home.)
 3. This helps prepare the information that goes into the `about.qmd` file, discussed later.
 
-## Our File
+#### Our File
 
 The current version of the `CITATION.cff` file is listed below.
 
 ```{r, results='asis'}
-
 setwd("tutorial-template")
 cat("```yaml", readLines("CITATION.cff"), "```", sep = "\n")
-
 ```
 
 
@@ -76,17 +99,27 @@ Fields you should pay attention to or fill out:
 * `url` should be the address for the actual websige i.e. the GitHub Pages
 
 
-# `LICENSE.md` and `LICENSE-CODE.md` {licenses}
+### `LICENSE.md` and `LICENSE-CODE.md` {#licenses}
 
 Our standard licenses are CC-BY-SA 4.0 for the written text and CC-0 for code contained within the tutorials. These license files are contained in `LICENSE.md` and `LICENSE-CODE.md` respectively.
 
-# `README.md` {readme}
+### `README.md` {#readme}
 
 This file should follow the typical conventions of a README file in that it provides a brief overview of the project, and any particular specifications on running code or downloading additional softwares as needed.
 
 Otherwise, we have no strong recommendations on what to include in this file other the Zenodo DOI badge at the top of the file. (Again, this is discussed in a later chapter.)
 
-# `TOPIC1` and `TOPIC2` Directories {#topic_directories}
+### `TOPIC1` and `TOPIC2` Directories {#topic_directories}
+
+```yaml
+├── TOPIC1
+│   ├── page1.qmd
+│   └── page2.qmd
+├── TOPIC2
+│   ├── page1.qmd
+│   ├── page2.qmd
+│   └── page3.qmd
+```
 
 These two directories are just example/template spaces for where you should store your Quarto (`.qmd`) files. In general, we anticipate that the tutorials will be divided into 2-5 broad sections, and each section will be represented by one of these folders. Each section will contain chapters which are independent Quarto files stored within their respective folders.
 
@@ -96,7 +129,7 @@ This image illustrates how "TOPIC1" and "TOPIC2" are the different "sections" of
 
 **Note that placing the chapter files in the respective folders will not automatically organize them into that location. You must specify which files are rendered, and where they are located in the `_quarto.yml` file.**
 
-# `_quarto.yml` {#quarto_yml}
+### `_quarto.yml` {#quarto_yml}
 
 The `_quarto.yml` file can be thought of the central orchestrator for the website. It defines what website themes/CSS/SCSS to use, how the pages should be organized, and other general properties of the website. 
 
@@ -111,18 +144,29 @@ cat("```yaml", readLines("_quarto.yml"), "```", sep = "\n")
 
 This is one of the more complex files in the repository, but there are only a few sections you'll need to interact with directly. I'll break down the file based on the 4 major categories in our file: `project`, `website`, `format`, and `editor`.
 
-## `project`
+#### `project`
 
-At a high level, this defines the entire project as being a website and I have used the pre- and post- render options to collect some standardized SCSS styling from our `lmu-osc/branding` repository. The details of this are in a footnote below^[scss_branding_explanation], but, in short, this is done to ensure that the same branding is added to all of our repos **and** so that we can just make branding changes to *one* repo in the future (rather than *all* of our tutorials.)
+```{r, results='asis'}
+setwd("tutorial-template")
+cat("```yaml", readLines("_quarto.yml")[1:4], "```", sep = "\n")
+```
 
-^[scss_branding_explanation]: Due to how Quarto renders projects, the SCSS file must physically be present in the directory when executing. As such, the file is downloaded from our branding GitHub repo before rendering, and then removed again after rendering becasue we do not want to retain this file in the repo. This is in contrast to the CSS file which can simply be read from somewhere on the web, and is the reason why we are able to specify the `css` parameter as just a link to our central branding repo.
+At a high level, this defines the entire project as being a website and I have used the pre- and post- render options to collect some standardized SCSS styling from our `lmu-osc/branding` repository. The details of this are in a footnote below[^scss_branding_explanation], but, in short, this is done to ensure that the same branding is added to all of our repos **and** so that we can just make branding changes to *one* repo in the future (rather than *all* of our tutorials.)
+
+[^scss_branding_explanation]: Due to how Quarto renders projects, the SCSS file must physically be present in the directory when executing. As such, the file is downloaded from our branding GitHub repo before rendering, and then removed again after rendering becasue we do not want to retain this file in the repo. This is in contrast to the CSS file which can simply be read from somewhere on the web, and is the reason why we are able to specify the `css` parameter as just a link to our central branding repo.
 
 
-## `website`
+
+#### `website`
 
 This is the section you will interact with the most (and almost exclusively) when developing your project. This will be subdivided into 3 sections: a general section, the `navbar`, and the `sidebar`.
 
-### General Options
+```{r, results='asis'}
+setwd("tutorial-template")
+cat("```yaml", readLines("_quarto.yml")[7:58], "```", sep = "\n")
+```
+
+##### General Options
 
 This encompasses all of the options between `title` and `margin-header`. Fields you should update or pay attention to:
 
@@ -131,23 +175,33 @@ This encompasses all of the options between `title` and `margin-header`. Fields 
 * `page-footer` please update the year in the copyright if needed
 
 
-### `navbar`
+##### `navbar`
 
 This section is for specifying the navbar or navigation bar at the top of the window. The only updates that should be made here are to the URLs which should be updated to include the correct GitHub repo address.
 
 
-### `sidebar`
+##### `sidebar`
 
 This is the section of the `_quarto.yml` file that allows you to specify the layout of your sections and chapters, as discussed in the [`TOPIC1` and `TOPIC2` section](#topic_dirs). You can add as many `section`s as you need--just make sure to provide them with an appropriate title. Likewise, you can include chapters under a section by listing the chapters under `contents`, and then providing at least an `href` which is a path to the chapter Quarto file. 
 
 You can also add a `text` tag directly after the `href` which will provide a new name for the chapter in the sidebar. However, you do not need to specify a `text` tag as Quarto will otherwise search for and use the value of `title` in your `.qmd` file.
 
 
-### `format`
+##### `format`
+
+```{r, results='asis'}
+setwd("tutorial-template")
+cat("```yaml", readLines("_quarto.yml")[62:75], "```", sep = "\n")
+```
 
 This section only provides additional website formatting and styling decisions, and does not need any changes. (However, if you think there are broad styling changes or additions we should make for all of our tutorials, feel free to open an issue or a PR!)
 
-### `editor`
+##### `editor`
+
+```{r, results='asis'}
+setwd("tutorial-template")
+cat("```yaml", readLines("_quarto.yml")[77], "```", sep = "\n")
+```
 
 When editing the project in RStudio, this determines whether Quarto documents will open up in `source` or `visual` mode by default. We have opted for `source` as the default
 
