--- a/authoring_tutorials/getting_started.qmd
+++ b/authoring_tutorials/getting_started.qmd
@@ -25,32 +25,44 @@ This helps us clearly see what content has been added when, by whom, and (thanks
 2. Navigate to the "Repositories" section of our organization, and click "New Repository"
 3. Under the "Repository template" section, select the `lmu-osc/tutorial-template` option.
 4. Create an informative, but short, repository name
-  - **Please only use dashes `-` to separate words e.g. `tutorial-template` or `introduction-to-renv`**
+    - **Please only use dashes `-` to separate words e.g. `tutorial-template` or `introduction-to-renv`**
 5. Add a brief description. This can be updated later.
 6. Set the repository to Public.
-  - We do not have a GitHub Enterprise account so we cannot host GitHub Pages from private repositories.
+    - We do not have a GitHub Enterprise account so we cannot host GitHub Pages from private repositories.
   
 # Local Set-up
 
 ## Pages Deployment
 
+::: {.callout-tip}
+In Step 3: if your terminal becomes stuck on the message "*Deploying gh-pages branch to website (this may take a few minutes)*" and if your deployment wasn't successful, then you have probably not made the repository public. Navigate to the Visibility option in the repository settings, and change to public. Then, repeat Step 3.
+:::
+
 1. Clone the new repository
 2. If you are going to use RStudio with your project, create a new RStudio project while on the main branch. Commit this `.RProj` file and push to GitHub immediately.
 3. Run the command `quarto publish gh-pages` at the terminal, and agree to publish the site.
-  - This will automatically activate GitHub Pages on the repo, and set the site to be deployed from the `gh-pages` branch on GitHub.
-  - You can check the status of the website deployment by navigating to Actions in the repo. A green checkbox indicates succesful deployment. Your terminal may or may not continue to display "Deploying gh-pages branch to website (this may take a few minutes)." If your deloyment was successful, you can simply use "Cmd+C" to exit the loop.
-  - Note: if your terminal becomes stuck on the message "Deploying gh-pages branch to website (this may take a few minutes)" and if your deployment wasn't successful, then you have probably not made the repository public. Navigate to the Visibility option in your settings, and change to public. Then, repeat the command above.
+    - This will automatically activate GitHub Pages on the repo, and set the site to be deployed from the `gh-pages` branch on GitHub.
 4. Remove the `gh-pages` branch from your local computer with `git branch -D gh-pages`. You should not be making direct edits to this branch as it is updated by the CI/CD pipeline for publishing.
+
+::: {.callout-note}
+You can check the status of the website deployment by navigating to Actions in the repo. A green checkbox indicates succesful deployment. Your terminal may or may not continue to display "Deploying gh-pages branch to website (this may take a few minutes)." If your deloyment was successful, you can simply use "Cmd+C" to exit the loop.
+:::
 
 ## Zenodo Preparation
 
+We use Zenodo for the generation of our repository DOIs, and the steps below outline a number of requirements or best practices we aim to follow when making our first Zenodo submission.
+
 ### CITATION File
+
+Zenodo in particular looks for a Citation File Format citation file.
 
 1. Open the CITATION.cff file, and complete it to the best of your ability/knowledge of what the tutorial will be named, who the authors will be, etc.
 2. Set the version to `0.0.1`.
 3. Remove the DOI field for now. This will be added back after we generated a DOI from Zenodo.
 
 ### About.qmd
+
+In addition to the CITATION file, we include citation information direcrtly in the tutorial in the About pages.
 
 1. Open the about.qmd file, and complete the `yaml` header with essentially the same citation information as above.
 
@@ -70,11 +82,11 @@ After the connection between the repository and Zenodo has been confirmed, it is
 
 1. From the GitHub repo page, press the "Create a new release" link on the right hand side.
 2. You must enter a tag, a release title, and a description.
-  - The tag should be the semantic version prefixed with "v" e.g. `v0.0.1` for the first release
-  - The title can be something like "Tutorial repo begin" or similar.
-  - The description can be very basic info about the repo/project. Later releases will use the "Generate release notes" button to create this description information.
+    - The tag should be the semantic version prefixed with "v" e.g. `v0.0.1` for the first release
+    - The title can be something like "Tutorial repo begin" or similar.
+    - The description can be very basic info about the repo/project. Later releases will use the "Generate release notes" button to create this description information.
 3. Press "Publish release." The repo will now be sent to Zenodo, and a DOI should be generated.
-  - However, this may fail if the CITATION file has errors. You should receive a notice about this ahead of time from the GitHub Action that checks the CITATION file so make sure to fix any mistakes in advance.
+    - However, this may fail if the CITATION file has errors. You should receive a notice about this ahead of time from the GitHub Action that checks the CITATION file so make sure to fix any mistakes in advance.
 4. Navigate to Zenodo.org, log-in, press on your user-name in the top right corner, and click on GitHub. Under the enabled repositories, you should see the name of your repo.
 5. Click the DOI badge. This should open a pop-up with different options for copying the text of the badge. Copy the Markdown option.
 6. Paste the code for the DOI Markdown badge at the top of the README file.
