Adjust publishing workflow to clone a repo within the action (#13)
* Clone via HTTPS in the Quarto doc

* Set the secrets.GITHUB_TOKEN value as a global env var in the action

--- a/authoring_tutorials/tutorial_template_repo.qmd
+++ b/authoring_tutorials/tutorial_template_repo.qmd
@@ -22,7 +22,7 @@ Rather than linking out to files in the `lmu-osc/tutorial-template` repository, 
 ```{bash}
 #| results: 'hide'
 #| message: false
-git clone git@github.com:lmu-osc/tutorial-template.git
+git clone https://github.com/lmu-osc/tutorial-template.git
 ```
 
 
